<resources>
    <string name="app_name">10 Pratik Bilgi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">10 Pratik Bilgi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayarlar</string>

    <string name="menu_home">Genel Bilgiler</string>
    <string name="menu_gallery">Otomobiller</string>
    <string name="menu_slideshow">Kıyafetler</string>
    <string name="menu_mutfak">Mutfak</string>
    <string name="menu_saglik">Sağlık</string>
    <string name="menu_hakkimizda">Hakkımızda</string>
    <string name="home_second">Genel Bilgiler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
