<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"

            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_mutfak"
            android:title="@string/menu_mutfak" />
        <item
            android:id="@+id/nav_saglik"
            android:title="@string/menu_saglik" />
        <item
            android:id="@+id/nav_hakkimizda"

            android:title="@string/menu_hakkimizda" />
    </group>
</menu>
