<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nergulkahya.pratikcozum.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.nergulkahya.pratikcozum.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nergulkahya.pratikcozum.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.nergulkahya.pratikcozum.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_mutfak"
        android:name="com.nergulkahya.pratikcozum.ui.mutfak.MutfakFragment"
        android:label="@string/menu_mutfak"
        tools:layout="@layout/mutfak_fragment" />
    <fragment
        android:id="@+id/nav_saglik"
        android:name="com.nergulkahya.pratikcozum.ui.saglik.SaglikFragment"
        android:label="@string/menu_saglik"
        tools:layout="@layout/saglik_fragment" />
    <fragment
        android:id="@+id/nav_hakkimizda"
        android:name="com.nergulkahya.pratikcozum.ui.about.AboutFragment"
        android:label="@string/menu_hakkimizda"
        tools:layout="@layout/about_fragment" />
</navigation>